# go_cpp_server

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  configure.sh
header/: game.h
include/: sole.h
source/: game.cpp  main.cpp
templates/: go.html  ws.html
